--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,10 @@
               "devServerTarget": "fitness:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
