--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~10.1.0",
     "@angular/compiler": "~10.1.0",
     "@angular/core": "~10.1.0",
+    "@angular/fire": "^6.0.3",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.0",
     "@angular/material": "^10.2.4",
@@ -23,11 +24,11 @@
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
     "bootstrap": "^4.5.2",
+    "firebase": ">= 5.5.7 <8",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "firebase": ">= 5.5.7 <8"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.0",
@@ -52,6 +53,7 @@
     "firebase-tools": "^7.12.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1"
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   }
 }
